--- a/views/update.ejs
+++ b/views/update.ejs
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Update Book</title>
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <hl>Update Book</h1>
